--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -215,3 +215,17 @@ button a{
   flex-wrap: wrap; /* Allow cards to wrap to a new row when needed */
     justify-content: flex-start; /* Align cards to the left within the container */
 }
+
+/* rating */
+.star-rating {
+  font-size: 24px;
+}
+
+.star {
+  color: #ccc;
+  display: inline-block;
+}
+
+.filled {
+  color: #fdd835; /* Change the color to your desired filled star color */
+}
