--- a/views/driver.ejs
+++ b/views/driver.ejs
@@ -51,6 +51,11 @@
             <div class="title"><%=e.bike_model%></div>
             <div class="description"><%=e.bike_plate_number%></div>
 			<div class="name"><%=e.name%></div>
+			<div class="star-rating">
+				<% for (let i = 1; i <= 5; i++) { %>
+				  <span class="star <%= i <= e.rating ? 'filled' : '' %>">&#9733;</span>
+				<% } %>
+			  </div>
         </div>
     </div>
 
